fix button margins

--- a/InvestmentTracker/Pages/Expenses/Index.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Index.cshtml
@@ -113,7 +113,7 @@
                 </button>
                 <a asp-page="./IncomeSources" class="btn btn-sm btn-primary">
                     <i class="bi bi-gear"></i>
-                    <span class="d-none d-sm-inline ms-1">Manage Income Sources</span>
+                    <span class="d-none d-sm-inline ms-2">Manage Income Sources</span>
                 </a>
             </div>
             <div class="card-body collapse" id="regularIncomesCollapse">
@@ -143,7 +143,7 @@
                                                 <input type="hidden" name="month" value="@Model.ViewModel.SelectedDate.Month" />
                                             </div>
                                             <div class="col">
-                                                <button type="submit" class="btn btn-sm btn-primary" title="Update" aria-label="Update">
+                                                <button type="submit" class="btn btn-sm btn-primary ms-2" title="Update" aria-label="Update">
                                                     <i class="bi bi-save"></i>
                                                 </button>
                                             </div>
@@ -167,7 +167,7 @@
                 </button>
                 <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#addOneTimeIncomeModal" title="Add Income" aria-label="Add Income">
                     <i class="bi bi-plus-lg"></i>
-                    <span class="d-none d-sm-inline ms-1">Add Income <kbd>O</kbd></span>
+                    <span class="d-none d-sm-inline ms-2">Add Income <kbd>O</kbd></span>
                 </button>
             </div>
             <div class="card-body collapse" id="oneTimeIncomesCollapse">
@@ -231,7 +231,7 @@
         </button>
         <a href="./Budgets?year=@Model.ViewModel.SelectedDate.Year&month=@Model.ViewModel.SelectedDate.Month" class="btn btn-sm btn-primary">
             <i class="bi bi-gear"></i>
-            <span class="d-none d-sm-inline ms-1">Manage Budgets</span>
+            <span class="d-none d-sm-inline ms-2">Manage Budgets</span>
         </a>
     </div>
     <div class="card-body collapse" id="budgetsCollapse">
@@ -311,7 +311,7 @@
                 <div>
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#addRegularExpenseModal" title="Add Expense" aria-label="Add Expense">
                         <i class="bi bi-plus-lg"></i>
-                        <span class="d-none d-sm-inline ms-1">Add Expense <kbd>A</kbd></span>
+                        <span class="d-none d-sm-inline ms-2">Add Expense <kbd>A</kbd></span>
                     </button>
                 </div>
             </div>
@@ -456,7 +456,7 @@
                 <div>
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#addIrregularExpenseModal" title="Add One-Time Expense" aria-label="Add One-Time Expense">
                         <i class="bi bi-plus-lg"></i>
-                        <span class="d-none d-sm-inline ms-1">Add One-Time Expense <kbd>Q</kbd></span>
+                        <span class="d-none d-sm-inline ms-2">Add One-Time Expense <kbd>Q</kbd></span>
                     </button>
                 </div>
             </div>
@@ -619,7 +619,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Add Expense" aria-label="Add Expense">
                         <i class="bi bi-plus-lg"></i>
-                        <span class="d-none d-sm-inline ms-1">Add Expense</span>
+                        <span class="d-none d-sm-inline ms-2">Add Expense</span>
                     </button>
                 </form>
             </div>
@@ -687,7 +687,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Add Expense" aria-label="Add Expense">
                         <i class="bi bi-plus-lg"></i>
-                        <span class="d-none d-sm-inline ms-1">Add Expense</span>
+                        <span class="d-none d-sm-inline ms-2">Add Expense</span>
                     </button>
                 </form>
             </div>
@@ -811,7 +811,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Update Expense" aria-label="Update Expense">
                         <i class="bi bi-save"></i>
-                        <span class="d-none d-sm-inline ms-1">Update Expense</span>
+                        <span class="d-none d-sm-inline ms-2">Update Expense</span>
                     </button>
                 </form>
             </div>
@@ -880,7 +880,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Update Expense" aria-label="Update Expense">
                         <i class="bi bi-save"></i>
-                        <span class="d-none d-sm-inline ms-1">Update Expense</span>
+                        <span class="d-none d-sm-inline ms-2">Update Expense</span>
                     </button>
                 </form>
             </div>
@@ -931,7 +931,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Add Income" aria-label="Add Income">
                         <i class="bi bi-plus-lg"></i>
-                        <span class="d-none d-sm-inline ms-1">Add Income</span>
+                        <span class="d-none d-sm-inline ms-2">Add Income</span>
                     </button>
                 </form>
             </div>
@@ -983,7 +983,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" title="Update Income" aria-label="Update Income">
                         <i class="bi bi-save"></i>
-                        <span class="d-none d-sm-inline ms-1">Update Income</span>
+                        <span class="d-none d-sm-inline ms-2">Update Income</span>
                     </button>
                 </form>
             </div>
