--- a/InvestmentTracker/Pages/Investments/Values.cshtml
+++ b/InvestmentTracker/Pages/Investments/Values.cshtml
@@ -38,13 +38,13 @@
 
     <h5>Add Value</h5>
     <form method="post" asp-page-handler="AddValue" asp-route-id="@Model.Investment.Id" class="row g-3" data-loading="Adding value...">
-        <div class="col-auto">
+        <div class="col-12 col-md-auto">
             <input type="hidden" asp-for="NewValue.InvestmentId" />
             <label asp-for="NewValue.AsOf" class="form-label"></label>
             <input asp-for="NewValue.AsOf" class="form-control" type="date" />
             <span asp-validation-for="NewValue.AsOf" class="text-danger"></span>
         </div>
-        <div class="col-auto">
+        <div class="col-12 col-md-auto">
             <label asp-for="NewValue.Value" class="form-label"></label>
             @if (ViewData.ModelState.IsValid)
             {
@@ -56,7 +56,7 @@
             }
             <span asp-validation-for="NewValue.Value" class="text-danger"></span>
         </div>
-        <div class="col-auto">
+        <div class="col-12 col-md-auto">
             <label asp-for="NewValue.ChangeType" class="form-label">Type</label>
             <select asp-for="NewValue.ChangeType" class="form-control" id="change-type-select">
                 <option value="@ValueChangeType.MarketValue">Market Value</option>
@@ -67,8 +67,8 @@
             </select>
             <span asp-validation-for="NewValue.ChangeType" class="text-danger"></span>
         </div>
-        <div class="col-auto align-self-end">
-            <button type="submit" class="btn btn-primary" title="Add" aria-label="Add">
+        <div class="col-12 col-md-auto align-self-end text-md-end mt-2 mt-md-0">
+            <button type="submit" class="btn btn-primary w-100 d-md-inline-block" title="Add" aria-label="Add">
                 <i class="bi bi-plus-lg"></i>
                 <span class="d-none d-sm-inline ms-1">Add</span>
             </button>
@@ -83,12 +83,12 @@
 
     <h5 class="mt-4">One-time Contributions</h5>
     <form method="post" asp-page-handler="AddContribution" asp-route-id="@Model.Investment.Id" class="row g-3" data-loading="Adding contribution...">
-        <div class="col-auto">
+        <div class="col-12 col-md-auto">
             <label asp-for="NewContribution.Date" class="form-label">Date</label>
             <input asp-for="NewContribution.Date" type="date" class="form-control" />
             <span asp-validation-for="NewContribution.Date" class="text-danger"></span>
         </div>
-        <div class="col-auto">
+        <div class="col-12 col-md-auto">
             <label asp-for="NewContribution.Amount" class="form-label">Amount</label>
             @if (ViewData.ModelState.IsValid)
             {
@@ -100,8 +100,8 @@
             }
             <span asp-validation-for="NewContribution.Amount" class="text-danger"></span>
         </div>
-        <div class="col-auto align-self-end">
-            <button type="submit" class="btn btn-primary" title="Add Contribution" aria-label="Add Contribution">
+        <div class="col-12 col-md-auto align-self-end text-md-end mt-2 mt-md-0">
+            <button type="submit" class="btn btn-primary w-100 d-md-inline-block" title="Add Contribution" aria-label="Add Contribution">
                 <i class="bi bi-plus-lg"></i>
                 <span class="d-none d-sm-inline ms-1">Add Contribution</span>
             </button>
